# msc-project

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
cmake/: FindEmbree.cmake  FindOpenEXR.cmake
include/core/: Batch.h  BatchItem.h  Bin.h  BoxFilter.h  Buffer.h  Camera.h  CameraInterface.h  CameraThread.h  Common.h  ComputePoints.h  ConstantTexture.h  Constants.h  Convolve.h  DirectionalBins.h  EmbreeWrapper.h  FilterInterface.h  GeometricCamera.h  GlobalBin.h  GridSampler.h  Image.h  IndependentSampler.h  Integrator.h  LambertShader.h  LayeredTexture.h  LightInterface.h  LocalBin.h  NullShader.h  ObjectInterface.h  OpenImageWrapper.h  Pathtracer.h  PinHoleCamera.h  Pixel.h  PolygonObject.h  QuadLight.h  RandomGenerator.h  Ray.h  RayBoundingbox.h  RayCompressed.h  RayDecompress.h  RayIntersect.h  (+17 more)
include/framebuffer/: Framebuffer.h  PlatformSpecification.h
scenes/: bounce.yaml  cornell.yaml  example.yaml
scenes/textures/: dragon_pattern.tx  floor_pattern.tx
src/: main.cpp
src/core/: Batch.cpp  BoxFilter.cpp  Camera.cpp  CameraInterface.cpp  CameraThread.cpp  ConstantTexture.cpp  Convolve.cpp  DirectionalBins.cpp  FilterInterface.cpp  GeometricCamera.cpp  GlobalBin.cpp  GridSampler.cpp  Image.cpp  IndependentSampler.cpp  Integrator.cpp  LambertShader.cpp  LayeredTexture.cpp  LightInterface.cpp  LocalBin.cpp  NullShader.cpp  Pathtracer.cpp  PinHoleCamera.cpp  Pixel.cpp  PolygonObject.cpp  QuadLight.cpp  RandomGenerator.cpp  RayBoundingbox.cpp  RayDecompress.cpp  RayIntersect.cpp  RaySort.cpp  RenderThread.cpp  SamplerInterface.cpp  Scene.cpp  Shading.cpp  StandardTexture.cpp  StratifiedSampler.cpp  SurfaceThread.cpp  TentFilter.cpp  ThinLensCamera.cpp  ThreadAbstract.cpp
src/framebuffer/: Framebuffer.cpp
